# learn-fastAPI-user-service

./: README.md  logging.conf  pyproject.toml  requirements.txt
src/: main.py  temp.py
src/api/: router.py
src/api/auth/: exceptions.py  router.py
src/api/common/: authentication.py  http_headers.py  middlewares.py
src/api/user/: router.py
src/configs/: __init__.py  base.py  staging.py
src/core/: user_auth.py
src/dao/: user.py
src/db/: tortoise_connection.py
src/db/migrations/models/: 0_20231104235613_init.py
src/db/models/: __init__.py  auth.py  user.py
src/utils/: jwt_auth.py  string_hasher.py
